# k6-load-test

./: README.md
api/: .dockerignore  Makefile  README.md  pyproject.toml
api/src/: main.py
app/: .gitignore  Dockerfile  Makefile  README.md
app/src/: main.py
k8s/: api-configmap.yml  api-deployment.yml  api-gateway.yml  api-gatewayclass.yml  api-httproute.yml  api-service.yaml  api-service.yml  api-servicemonitor.yml  connect.sh  install.sh
